Some style updates

--- a/index.html
+++ b/index.html
@@ -76,129 +76,134 @@
 
     <!-- body Info -->
     <div class="homepage-info" id="homepage-info-page">
-        <div>
-            <h3>Biologisk mångfald i hagen</h3>
-            <p>
-                Åkerbackarna och hällarna i betesmarken är mycket artrika. Floran har utvecklats och
-                formats genom flera hundra år av öppethållande genom bete och slåtter. Den
-                långvariga hävden har magrat ur marken och skapat förutsättningar för
-                konkurrenssvaga blommande örter och gräs. Karaktärsarter på backarna är
-                tjärblomster, backklöver, backsmultron, harklöver, brudbröd, axveronika, olika arter av
-                fetknoppar, backnejlika, ängsskallra och solvända. Bland dessa är axveronika,
-                backklöver och solvända samt flentimotej, vippärt, gullklöver och vårstarr rödlistade.
-                Att en art är rödlistad innebär att den bedöms riskera att dö ut från Sverige.
-                Hur många av dessa kan du hitta i sommar?
-            </p>
-        </div>
-        <div class="homepage-info-images">
-            <img src="src/images/blomma2.png" loading="lazy"/>
-            <img src="src/images/blomma1.png" loading="lazy"/>
-            <img src="src/images/blomma1.jpg" loading="lazy"/>
-        </div>
-        <div>
-            <h3>Vaxskivlingar är ofta praktfulla</h3>
-            <p>
-                Den magra jorden och den långa beteshävden har givit upphov till en rik
-                ängssvampsflora. Det finns minst 12 olika arter av vaxskivlingar och
-                ängsfingersvampar på ängen. Det tyder på att området har ett högt lokalt
-                bevarandevärde som ängs- och betesmark. Två av svamparna, scharlakansvaxskivling
-                och gråbrun ängsfingersvamp, är dessutom rödlistade.
-                Vaxskivlingar är ofta riktigt praktfulla och färggranna svampar och roliga att leta efter.
-                Du hittar dem främst under september till oktober.
-            </p>
-        </div>
-        <div>
-            <h3>Insekter på ängen</h3>
-            <div class="homepage-info-images-text">
-                <p>
-                    En stor mängd blommor drar förstås också till sig många fjärilar och andra
-                    pollinerande insekter. På Malma ängar har hittills fem rödlistade fjärilsarter
-                    observerats; humlerotfjäril, violettkantad guldvinge samt sexfläckig, bredbrämad och
-                    mindre bastardsvärmare! Utöver dessa mer sällsynta invånare bor även ett stort antal
-                    andra dagfjärilar, nattflyn, vildbin, vivlar, skinnbaggar och skalbaggar i de varma,
-                    blomrika miljöerna. Inte mindre än 170 arter av ryggradslösa djur finns rapporterade
-                    från området i Artportalen och många fler lär det finnas för den som letar.
-                    Ut och håva, det är vår uppmaning!
-                </p>
-                <img src="src/images/bi1.png" loading="lazy"/>
-            </div>
-        </div>
-        <div>
-            <h3>Hjälp till rädda Malma by och ängar</h3>
-            <p>
-                Viktigaste grunden för att vi ska bevara ängarna är kunskap om
-                den biologiska mångfald som finns här. Utan kunskap vet vi inte
-                vad som är värt att bevara och hur man ska göra det. Ett bra sätt
-                att lära sig är att vara nyfiken när man är ute i naturen eller att
-                vara med i någon förening.
-                I Facebook-gruppen ”Rädda Malma by och ängar” kan du läsa
-                om kampen. Där finns även epost till personer som du kan
-                kontakta och länkar till beslutsdokument mm.
-            </p>
-            <div class="homepage-info-images">
-                <img src="src/images/malmagård.jpg" loading="lazy"/>
-                <img src="src/images/malmaängar1.jpg" loading="lazy"/>
-                <img src="src/images/malmaängar2.jpg" loading="lazy"/>
-            </div>
-        </div>
-        <div>
-            <h3>Ägare till Malma by och ängar</h3>
-            <p>
-              Ägare till de aktuella markerna på och vid Malma gård och ängar är genom en flerhundraårig donation Gustavianska stiftelsen. 
-              Beslut om stiftelsens ägor fattas av Uppsala universitet genom dess Konsistorium. 
-              Markerna förvaltas av Uppsala Akademiförvaltning. Så här skriver akademiförvaltningen på sin <a href="www.uaf.se">hemsida:</a>
-            </p>
-            <p style="border: 2px solid black; border-radius: 5px; padding: 10px;">
-                ”Vi förvaltar drömmar om en bättre värld
-                Genom långsiktig och hållbar förvaltning säkerställer vi att våra
-                donatorers vilja fortlever utan att göra avkall på planetens och
-                framtida generationers behov, både ekonomiskt, miljömässigt
-                och socialt.”
-            </p>
-            <p>
-                Kontakta Akdemiförvaltningen och påpeka på att de ska
-                säkerställa en långsiktig hållbar förvaltning som de själva säger
-                att de vill uppnå.
-            </p>
-            <p>
-                <b>VD Kent Berg</b><br>
-                018 - 471 75 40 070-632 93 94 <br>
-                kent.berg@uaf.uu.se
-            </p>
-        </div>
-        <div>
-            <h3>Malma ängar och betesmarker</h3>
-            <p>
-                Ända sedan Malma och Bäcklösa steg ur havet för ca 3500 år sedan har
-                människor bott här och brukat jorden. De förhistoriska spåren i hagen är
-                bland annat skärvstenshögar och gravhögar från bronsåldern. Således har
-                ängen en kontinuitet av betesdrift och åkerbruk i flera tusen år!
-                Liksom i övriga Uppland har man bedrivit åkerbruk varhelst det har varit
-                möjligt och alla platser med finsediment och lera har varit uppodlade. Dessa
-                jordar har brukats som åker fram tills för ca 30–40 år sedan. Backarna och
-                hällmarken däremellan har betats när åkern legat i träda eller efterbetats
-                efter ängsslåtter. Detta har lett till att Malma ängar idag dels består av
-                näringsrika men artfattiga gamla åkertegar, dels av näringsfattiga
-                hällmarker som är mycket artrika.
-                Idag används hagen som betesmark och betas av hästar från Malma gård.
-            </p>
-        </div>
-        <div>
-            <h3>Betet har avgörande betydelse</h3>
-            <p>
-                Betet är av avgörande för att områdets värden för den biologiska
-                mångfalden ska bevaras. Betesdjuren håller undan högväxande gräs och
-                buskar och gynnar de små, lågväxande örterna. Om betesdjuren försvinner
-                växer hagarna snabbt
-                igen. Högväxta gräs som hundäxing och knylhavre och aggressivt växande
-                slånbuskage kommer då konkurrera ut örterna. Lövsly kommer växa upp
-                och slutligen kommer hagen att förvandlas till en ung lövskog.
-            </p>
-            <div class="homepage-info-images">
-                <img src="src/images/häst1.jpg" style="height: unset;" loading="lazy"/>
-            </div>
-        </div>
-
+        <section style="background: linear-gradient(180deg, white, aliceblue); padding-top: 25px;">
+          <div>
+              <h3>Biologisk mångfald i hagen</h3>
+              <p>
+                  Åkerbackarna och hällarna i betesmarken är mycket artrika. Floran har utvecklats och
+                  formats genom flera hundra år av öppethållande genom bete och slåtter. Den
+                  långvariga hävden har magrat ur marken och skapat förutsättningar för
+                  konkurrenssvaga blommande örter och gräs. Karaktärsarter på backarna är
+                  tjärblomster, backklöver, backsmultron, harklöver, brudbröd, axveronika, olika arter av
+                  fetknoppar, backnejlika, ängsskallra och solvända. Bland dessa är axveronika,
+                  backklöver och solvända samt flentimotej, vippärt, gullklöver och vårstarr rödlistade.
+                  Att en art är rödlistad innebär att den bedöms riskera att dö ut från Sverige.
+                  Hur många av dessa kan du hitta i sommar?
+              </p>
+          </div>
+          <div class="homepage-info-images">
+              <img src="src/images/blomma2.png" loading="lazy"/>
+              <img src="src/images/blomma1.png" loading="lazy"/>
+              <img src="src/images/blomma1.jpg" loading="lazy"/>
+          </div>
+          <div>
+              <h3>Vaxskivlingar är ofta praktfulla</h3>
+              <p>
+                  Den magra jorden och den långa beteshävden har givit upphov till en rik
+                  ängssvampsflora. Det finns minst 12 olika arter av vaxskivlingar och
+                  ängsfingersvampar på ängen. Det tyder på att området har ett högt lokalt
+                  bevarandevärde som ängs- och betesmark. Två av svamparna, scharlakansvaxskivling
+                  och gråbrun ängsfingersvamp, är dessutom rödlistade.
+                  Vaxskivlingar är ofta riktigt praktfulla och färggranna svampar och roliga att leta efter.
+                  Du hittar dem främst under september till oktober.
+              </p>
+          </div>
+          <div>
+              <h3>Insekter på ängen</h3>
+              <div class="homepage-info-images-text">
+                  <p>
+                      En stor mängd blommor drar förstås också till sig många fjärilar och andra
+                      pollinerande insekter. På Malma ängar har hittills fem rödlistade fjärilsarter
+                      observerats; humlerotfjäril, violettkantad guldvinge samt sexfläckig, bredbrämad och
+                      mindre bastardsvärmare! Utöver dessa mer sällsynta invånare bor även ett stort antal
+                      andra dagfjärilar, nattflyn, vildbin, vivlar, skinnbaggar och skalbaggar i de varma,
+                      blomrika miljöerna. Inte mindre än 170 arter av ryggradslösa djur finns rapporterade
+                      från området i Artportalen och många fler lär det finnas för den som letar.
+                      Ut och håva, det är vår uppmaning!
+                  </p>
+                  <img src="src/images/bi1.png" loading="lazy"/>
+              </div>
+          </div>
+        </section>
+        <section style="background: linear-gradient(180deg, aliceblue, lavender);">
+          <div>
+              <h3>Hjälp till rädda Malma by och ängar</h3>
+              <p>
+                  Viktigaste grunden för att vi ska bevara ängarna är kunskap om
+                  den biologiska mångfald som finns här. Utan kunskap vet vi inte
+                  vad som är värt att bevara och hur man ska göra det. Ett bra sätt
+                  att lära sig är att vara nyfiken när man är ute i naturen eller att
+                  vara med i någon förening.
+                  I Facebook-gruppen ”Rädda Malma by och ängar” kan du läsa
+                  om kampen. Där finns även epost till personer som du kan
+                  kontakta och länkar till beslutsdokument mm.
+              </p>
+              <div class="homepage-info-images">
+                  <img src="src/images/malmagård.jpg" loading="lazy"/>
+                  <img src="src/images/malmaängar1.jpg" loading="lazy"/>
+                  <img src="src/images/malmaängar2.jpg" loading="lazy"/>
+              </div>
+          </div>
+          <div>
+              <h3>Ägare till Malma by och ängar</h3>
+              <p>
+                Ägare till de aktuella markerna på och vid Malma gård och ängar är genom en flerhundraårig donation Gustavianska stiftelsen. 
+                Beslut om stiftelsens ägor fattas av Uppsala universitet genom dess Konsistorium. 
+                Markerna förvaltas av Uppsala Akademiförvaltning. Så här skriver akademiförvaltningen på sin <a href="www.uaf.se">hemsida:</a>
+              </p>
+              <p style="border: 2px solid black; border-radius: 5px; padding: 10px;">
+                  ”Vi förvaltar drömmar om en bättre värld
+                  Genom långsiktig och hållbar förvaltning säkerställer vi att våra
+                  donatorers vilja fortlever utan att göra avkall på planetens och
+                  framtida generationers behov, både ekonomiskt, miljömässigt
+                  och socialt.”
+              </p>
+              <p>
+                  Kontakta Akdemiförvaltningen och påpeka på att de ska
+                  säkerställa en långsiktig hållbar förvaltning som de själva säger
+                  att de vill uppnå.
+              </p>
+              <p>
+                  <b>VD Kent Berg</b><br>
+                  018 - 471 75 40 070-632 93 94 <br>
+                  kent.berg@uaf.uu.se
+              </p>
+          </div>
+        </section>
+        <section style="background-color: lavender; padding-bottom: 25px;">
+          <div>
+              <h3>Malma ängar och betesmarker</h3>
+              <p>
+                  Ända sedan Malma och Bäcklösa steg ur havet för ca 3500 år sedan har
+                  människor bott här och brukat jorden. De förhistoriska spåren i hagen är
+                  bland annat skärvstenshögar och gravhögar från bronsåldern. Således har
+                  ängen en kontinuitet av betesdrift och åkerbruk i flera tusen år!
+                  Liksom i övriga Uppland har man bedrivit åkerbruk varhelst det har varit
+                  möjligt och alla platser med finsediment och lera har varit uppodlade. Dessa
+                  jordar har brukats som åker fram tills för ca 30–40 år sedan. Backarna och
+                  hällmarken däremellan har betats när åkern legat i träda eller efterbetats
+                  efter ängsslåtter. Detta har lett till att Malma ängar idag dels består av
+                  näringsrika men artfattiga gamla åkertegar, dels av näringsfattiga
+                  hällmarker som är mycket artrika.
+                  Idag används hagen som betesmark och betas av hästar från Malma gård.
+              </p>
+          </div>
+          <div>
+              <h3>Betet har avgörande betydelse</h3>
+              <p>
+                  Betet är av avgörande för att områdets värden för den biologiska
+                  mångfalden ska bevaras. Betesdjuren håller undan högväxande gräs och
+                  buskar och gynnar de små, lågväxande örterna. Om betesdjuren försvinner
+                  växer hagarna snabbt
+                  igen. Högväxta gräs som hundäxing och knylhavre och aggressivt växande
+                  slånbuskage kommer då konkurrera ut örterna. Lövsly kommer växa upp
+                  och slutligen kommer hagen att förvandlas till en ung lövskog.
+              </p>
+              <div class="homepage-info-images">
+                  <img src="src/images/häst1.jpg" style="max-height: unset;" loading="lazy"/>
+              </div>
+          </div>
+        </section>
         <!-- Saknar Påverka beslut-->
 
     </div>
