Update image format of styrelse

--- a/pages/styrelse.html
+++ b/pages/styrelse.html
@@ -56,37 +56,37 @@
     <h1 id="styrelse-page-title">Vår styrelse</h1>
     <div class="styrelse-flexbox-wrapper">
         <div>
-            <img src="../src/images/styrelse/margareta.jpg" />
+            <img src="../src/images/styrelse/margareta.webp" />
             <h3>Margareta Krabbe</h3>
             <span>Ordförande</span>
         </div>
         <div>
-            <img src="../src/images/styrelse/hans.jpg" />
+            <img src="../src/images/styrelse/hans.webp" />
             <h3>Hans Åberg</h3>
             <span>Sekreterare</span>
         </div>
         <div>
-            <img src="../src/images/styrelse/ulla-britt.jpg" />
+            <img src="../src/images/styrelse/ulla-britt.webp" />
             <h3>Ulla-Britt Fogelin Ekström</h3>
             <span>Kassör</span>
         </div>
         <div>
-          <img src="../src/images/styrelse/boel.jpg" />
+          <img src="../src/images/styrelse/boel.webp" />
           <h3>Boel Åström</h3>
           <span>Ledamot</span>
         </div>
         <div>
-            <img src="../src/images/styrelse/leif.jpg" />
+            <img src="../src/images/styrelse/leif.webp" />
             <h3>Leif Eriksson</h3>
             <span>Ledamot</span>
         </div>
         <div>
-            <img src="../src/images/styrelse/carl.jpg" />
+            <img src="../src/images/styrelse/carl.webp" />
             <h3>Carl Bagge</h3>
             <span>Suppleant</span>
         </div>
         <div>
-          <img src="../src/images/styrelse/sinnika.jpg" />
+          <img src="../src/images/styrelse/sinnika.webp" />
           <h3>Sinnika Anell</h3>
           <span>Suppleant</span>
         </div>
