Add aktuellt sida

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           </div>
         </div>
         <div>
+          <a href="pages/aktuellt.html">Aktuellt</a>
+        </div>
+        <div>
           <a href="pages/kontakt.html">Kontakt</a>
         </div>
         <div class="call-to-action">
