--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -14,7 +14,7 @@
     <!-- Header -->
 
     <header>
-      <h1><a href="../index.html">Föreningen Malma By Och Ängar</a></h1>
+      <h1><a href="../index.html">Föreningen Malma by och ängar</a></h1>
       <nav>
         <div>
           <a href="om-föreningen.html">Om Föreningen</a>
@@ -24,6 +24,9 @@
             <a href="styrelse.html">Styrelse</a>
             <a href="stadgar.html">Stadgar</a>
           </div>
+        </div>
+        <div>
+          <a href="aktuellt.html">Aktuellt</a>
         </div>
         <div>
           <a href="kontakt.html"  class="active">Kontakt</a>
