--- a/pages/bli-medlem.html
+++ b/pages/bli-medlem.html
@@ -14,7 +14,7 @@
     <!-- Header -->
 
     <header>
-      <h1><a href="../index.html">Föreningen Malma By Och Ängar</a></h1>
+      <h1><a href="../index.html">Föreningen Malma by och ängar</a></h1>
       <nav>
         <div>
           <a href="om-föreningen.html">Om Föreningen</a>
@@ -26,10 +26,13 @@
           </div>
         </div>
         <div>
+          <a href="aktuellt.html">Aktuellt</a>
+        </div>
+        <div>
           <a href="kontakt.html">Kontakt</a>
         </div>
         <div class="call-to-action">
-          <a href="bli-medlem.html" id="call-to-action" style="outline: 3px solid black; font-weight: bold;">Bli Medlem</a>
+          <a href="bli-medlem.html" id="call-to-action" style="outline: 3px solid black; text-shadow: 1px 0 0 currentColor;">Bli Medlem</a>
         </div>
       </nav>
     </header>
