Fixed another spelling error

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
 
     <header>
-      <h1><a href="index.html">Föreningen Malma by Och ängar</a></h1>
+      <h1><a href="index.html">Föreningen Malma by och ängar</a></h1>
       <nav>
         <div>
           <a href="pages/om-föreningen.html">Om Föreningen</a>
