Update phone nav

--- a/pages/stadgar.html
+++ b/pages/stadgar.html
@@ -46,12 +46,13 @@
       <span></span>
       <ul id="menu">
         <a href="../index.html"><li>Hem</li></a>
-        <a href="bli-medlem.html"><li>Bli Medlem</li></a>
         <a href="om-föreningen.html"><li>Om Föreningen</li></a>
         <a href="mål.html"><li>Mål</li></a>
         <a href="styrelse.html"><li>Styrelse</li></a>
-        <a href="stadgar.html"><li>Stadgar</li></a>
+        <a href="stadgar.html"><li class="active">Stadgar</li></a>
         <a href="kontakt.html"><li>Kontakt</li></a>
+        <a href="aktuellt.html"><li>Aktuellt</li></a>
+        <a href="bli-medlem.html"><li>Bli Medlem</li></a>
       </ul>
     </div>
 
