--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
       <span></span>
       <span></span>
       <ul id="menu">
-        <a href="index.html"><li>Hem</li></a>
-        <a href="pages/bli-medlem.html"><li>Bli Medlem</li></a>
+        <a href="index.html"><li class="active">Hem</li></a>
         <a href="pages/om-föreningen.html"><li>Om Föreningen</li></a>
         <a href="pages/mål.html"><li>Mål</li></a>
         <a href="pages/styrelse.html"><li>Styrelse</li></a>
         <a href="pages/stadgar.html"><li>Stadgar</li></a>
         <a href="pages/kontakt.html"><li>Kontakt</li></a>
+        <a href="pages/aktuellt.html"><li>Aktuellt</li></a>
+        <a href="pages/bli-medlem.html"><li>Bli Medlem</li></a>
       </ul>
     </div>
 
