--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     
     <!-- Header -->
-
+    <!-- Test -->
     <header>
       <h1><a href="index.html">Föreningen Malma by och ängar</a></h1>
       <nav>
