--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
           </div>
         </div>
         <div>
-          <a href="pages/aktuellt.html">Aktuellt</a>
+            <a href="pages/aktuellt.html">Aktuellt</a>
+            <div class="dropdown-menu">
+                <a href="pages/aktuellt.html">Aktuellt</a>
+                <a href="pages/kalendarium.html">Kalendarium</a>
+            </div>
         </div>
         <div>
           <a href="pages/kontakt.html">Kontakt</a>
