--- a/pages/aktuellt.html
+++ b/pages/aktuellt.html
@@ -26,6 +26,10 @@
       </div>
       <div>
         <a href="aktuellt.html" class="active">Aktuellt</a>
+        <div class="dropdown-menu">
+            <a href="aktuellt.html">Aktuellt</a>
+            <a href="kalendarium.html">Kalendarium</a>
+        </div>
       </div>
       <div>
         <a href="kontakt.html">Kontakt</a>
@@ -55,53 +59,28 @@
     </ul>
   </div>
   
-  <h1 style="text-align: center; padding: 25px 0 0 0; margin-bottom: 0;">Aktuellt och planerat</h1>
-  <main style="display: flex; flex-direction: column; padding: 25px 0; justify-content: center; width: min-content; margin: auto;">
+  <h1 style="margin:auto; padding: 50px 25px 0 25px; width: 80%;">Aktuellt och planerat</h1>
+  <main style="padding: 25px; justify-content: center; margin: auto; width: 80%;">
     <section>
-      <h2 style="text-align: center;">
-        Malmadagen – för hela familjen!<br>
-        Lördagen den 13 maj kl. 10-14
+      <h2>
+        Föreningen Malma by och ängar bjuder in: Träffa våra naturkunniga experter<br>
+        <small>Tisdag 13 juni kl. 18.00</small>
       </h2>
-      <img src="../src/images/aktuellt/blommor.jpg" style="border-radius: 10px; position: relative; left: 50%; transform: translate(-50%, 0); max-width: 80vw;">
-      <p style="text-align: center;"><b>Kom till vårt fina stadsnära naturområde Malma by och ängar!</b></p>
-      <p><b>Plats:</b> Du hittar oss vid ängarna innanför busshållplatsen Slädvägen/Barkspadevägen</p>
+      <img src="../src/images/aktuellt/aktuellt.png" style="border-radius: 10px;  max-width: 100%;">
       <p>
-        <b>Inbjudna:</b> Alla intresserade, medlemmar i föreningen och angränsande
-        villaföreningar, boende i Gottsunda, Valsätra, Malma, Norby, Rosendal, Ulleråker,
-        Ultuna, Genetiska trädgården, Bäcklösa, övriga grannar och vänner
+        Kom med oss ut på ängarna och till Bäcklösa Natura2000!
+        <b>Cajsa Björkén</b> och <b>Björn</b> Bråvander delar med sig av sina kunskaper och hjälper oss se allt det fina som finns i vårt stadsnära område Malma by och ängar.
+        En stilla kunskapspromenad i lättgången terräng. Vi ses vid skylten vid Slädvägen/Barkspadevägen (även vid regnigt väder).<br>
+         Välkommen!
       </p>
       <p>
-        <b>Vilka medverkar:</b> Föreningens styrelse och andra medlemmar, inbjudna sakkunniga gäster
+        <b>Cajsa Björkén</b><br>
+        Cajsa är ekolog och naturvårdare med stort intresse för såväl skog som kulturlandskap. Hon arbetar med naturvård på Upplandsstiftelsen men spenderar även en stor del av sin fritid i naturen i jakt på arter och naturupplevelser. Cajsa bor i anslutning till beteshagarna vid Malma och har ett stort engagemang för bevarandet av naturvärdena i området.
       </p>
       <p>
-        <b>Vad gör vi:</b> Vi visar på betesmarkernas unika flora och fauna, vandrar på den,
-        informerar om naturen inklusive Bäcklösa Natura 2000, får veta vilka de aktuella
-        planerna för området är och vad föreningen har jobbat med, fikar, pratar, spelar
-        frisbee, går tipspromenad. Saft och bullar till barnen, men ta gärna med eget fika!
-        Detaljprogram kommer.
+        <b>Björn Bråvander</b><br>
+        Björn är en artjägare som är intresserad av det mesta i naturen. Kanske särskilt rödlistade- och signal-arter. Specialområdet är svampar. Björn driver eget företag, i vilket han inventerar svampförekomst i potentiellt skyddsvärd skog och håller svampkurser. Han vill inte presentera sig själv som någon insektsexpert, men som boende i Ulleråker börjar han bli väl bekant med förekomster av den starkt hotade cinnoberbaggen i vår närmiljö här i Uppsalas södra stadsdelar.
       </p>
-      <p><b>Inbjudare:</b> Föreningen Malma by och ängar</p>
-      <p><b>Frågor/kontakt:</b> margareta.krabbe@gmail.com</p>
-    </section>
-    <section style="border-radius: 10px; border: 3px solid black; padding: 25px;">
-      <h2>Tidsplan</h2>
-      <h3>Lördag 13 maj</h3>
-      <p>Malmadagen Aktivitet och trivsel ute på ängarna</p>
-      <h3>Onsdag 31 maj</h3>
-      <p>Styrelsesammanträde</p>
-      <h3>Onsdag 7 juni</h3>
-      <p>Förväntat datum för kommunens detaljplan över området</p>
-      <h3>Tisdag 13 juni</h3>
-      <p>Exkursion med Cajsa Björkén</p>
-      <h3>Tisdag 13 juni</h3>
-      <p>Styrelsesammanträde</p>
-      <h3>Onsdag 14 juni</h3>
-      <p>
-        Föreningsmöte på Valsätraskolan
-        Information och åtgärder med anledning av detaljplanen
-      </p>
-      <h3>Onsdag 19 juli</h3>
-      <p>Preliminärt sista datum för synpunkter på detaljplanen</p>
     </section>
   </main>
   
