--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -27,6 +27,10 @@
         </div>
         <div>
           <a href="aktuellt.html">Aktuellt</a>
+          <div class="dropdown-menu">
+              <a href="aktuellt.html">Aktuellt</a>
+              <a href="kalendarium.html">Kalendarium</a>
+          </div>
         </div>
         <div>
           <a href="kontakt.html"  class="active">Kontakt</a>
