--- a/pages/mål.html
+++ b/pages/mål.html
@@ -27,9 +27,17 @@
         </div>
         <div>
           <a href="aktuellt.html">Aktuellt</a>
+          <div class="dropdown-menu">
+              <a href="aktuellt.html">Aktuellt</a>
+              <a href="kalendarium.html">Kalendarium</a>
+          </div>
         </div>
         <div>
-          <a href="kontakt.html">Kontakt</a>
+          <a href="aktuellt.html" class="active">Aktuellt</a>
+          <div class="dropdown-menu">
+              <a href="aktuellt.html">Aktuellt</a>
+              <a href="kalendarium.html">Kalendarium</a>
+          </div>
         </div>
         <div class="call-to-action">
           <a href="bli-medlem.html" id="call-to-action">Bli Medlem</a>
