--- a/pages/styrelse.html
+++ b/pages/styrelse.html
@@ -27,6 +27,10 @@
         </div>
         <div>
           <a href="aktuellt.html">Aktuellt</a>
+          <div class="dropdown-menu">
+              <a href="aktuellt.html">Aktuellt</a>
+              <a href="kalendarium.html">Kalendarium</a>
+          </div>
         </div>
         <div>
           <a href="kontakt.html">Kontakt</a>
@@ -70,7 +74,7 @@
             <span>Sekreterare</span>
         </div>
         <div>
-            <img src="../src/images/styrelse/ulla-britt.webp" />
+            <img src="file:///E:/bilder/P1140605.JPG" />
             <h3>Ulla-Britt Fogelin Ekström</h3>
             <span>Kassör</span>
         </div>
