--- a/pages/styrelse.html
+++ b/pages/styrelse.html
@@ -74,7 +74,7 @@
             <span>Sekreterare</span>
         </div>
         <div>
-            <img src="file:///E:/bilder/P1140605.JPG" />
+            <img src="../src/images/styrelse/Ulla-britt.webp" />
             <h3>Ulla-Britt Fogelin Ekström</h3>
             <span>Kassör</span>
         </div>
