Update phone navigation

--- a/pages/kalendarium.html
+++ b/pages/kalendarium.html
@@ -54,7 +54,8 @@
       <a href="styrelse.html"><li>Styrelse</li></a>
       <a href="stadgar.html"><li>Stadgar</li></a>
       <a href="kontakt.html"><li>Kontakt</li></a>
-      <a href="aktuellt.html"><li class="active">Aktuellt</li></a>
+      <a href="aktuellt.html"><li>Aktuellt</li></a>
+      <a href="kalendarium.html" ><li class="active">Kalendarium</li></a>
       <a href="bli-medlem.html"><li>Bli Medlem</li></a>
     </ul>
   </div>
