--- a/pages/stadgar.html
+++ b/pages/stadgar.html
@@ -56,6 +56,7 @@
         <a href="stadgar.html"><li class="active">Stadgar</li></a>
         <a href="kontakt.html"><li>Kontakt</li></a>
         <a href="aktuellt.html"><li>Aktuellt</li></a>
+        <a href="kalendarium.html"><li>Kalendarium</li></a>
         <a href="bli-medlem.html"><li>Bli Medlem</li></a>
       </ul>
     </div>
