--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <a href="pages/stadgar.html"><li>Stadgar</li></a>
         <a href="pages/kontakt.html"><li>Kontakt</li></a>
         <a href="pages/aktuellt.html"><li>Aktuellt</li></a>
+        <a href="pages/kalendarium.html"><li>Kalendarium</li></a>
         <a href="pages/bli-medlem.html"><li>Bli Medlem</li></a>
       </ul>
     </div>
