--- a/pages/aktuellt.html
+++ b/pages/aktuellt.html
@@ -55,6 +55,7 @@
       <a href="stadgar.html"><li>Stadgar</li></a>
       <a href="kontakt.html"><li>Kontakt</li></a>
       <a href="aktuellt.html"><li class="active">Aktuellt</li></a>
+      <a href="kalendarium.html"><li>Kalendarium</li></a>
       <a href="bli-medlem.html"><li>Bli Medlem</li></a>
     </ul>
   </div>
