--- a/pages/mål.html
+++ b/pages/mål.html
@@ -33,7 +33,7 @@
           </div>
         </div>
         <div>
-          <a href="aktuellt.html" class="active">Aktuellt</a>
+          <a href="aktuellt.html">Aktuellt</a>
           <div class="dropdown-menu">
               <a href="aktuellt.html">Aktuellt</a>
               <a href="kalendarium.html">Kalendarium</a>
