--- a/pages/aktuellt.html
+++ b/pages/aktuellt.html
@@ -59,20 +59,23 @@
       <a href="bli-medlem.html"><li>Bli Medlem</li></a>
     </ul>
   </div>
-  
-  <h1 style="margin:auto; padding: 50px 25px 0 25px; width: 80%;">Aktuellt och planerat</h1>
-  <main style="padding: 25px; justify-content: center; margin: auto; width: 80%;">
-    <section>
-      <h2>
-        Föreningen Malma by och ängar bjuder in: Träffa våra naturkunniga experter<br>
-        <small>Tisdag 13 juni kl. 18.00</small>
-      </h2>
-      <img src="../src/images/aktuellt/aktuellt.png" style="border-radius: 10px;  max-width: 100%;">
+  <!-- Body -->
+  <img class="image-title" src="../src/images/tusenskona.jpg">
+  <div class="cover">
+      <h1>Aktuellt</h1>
+  </div>
+
+  <div class="bli-medlem-info" style="transform: translate(0, -125px);">
+    <h1>Aktuellt</h1>
+    <article>
+      <h2 style="margin-bottom: 0;">Föreningen Malma by och ängar bjuder in: Träffa våra naturkunniga experter</h2>
+      <span>Tisdag 13 juni kl. 18.00</span>
+      <img src="../src/images/aktuellt/aktuellt.png" style="border-radius: 10px; margin: 25px 0; width: 100%;">
       <p>
         Kom med oss ut på ängarna och till Bäcklösa Natura2000!
         <b>Cajsa Björkén</b> och <b>Björn</b> Bråvander delar med sig av sina kunskaper och hjälper oss se allt det fina som finns i vårt stadsnära område Malma by och ängar.
         En stilla kunskapspromenad i lättgången terräng. Vi ses vid skylten vid Slädvägen/Barkspadevägen (även vid regnigt väder).<br>
-         Välkommen!
+        Välkommen!
       </p>
       <p>
         <b>Cajsa Björkén</b><br>
@@ -82,8 +85,7 @@
         <b>Björn Bråvander</b><br>
         Björn är en artjägare som är intresserad av det mesta i naturen. Kanske särskilt rödlistade- och signal-arter. Specialområdet är svampar. Björn driver eget företag, i vilket han inventerar svampförekomst i potentiellt skyddsvärd skog och håller svampkurser. Han vill inte presentera sig själv som någon insektsexpert, men som boende i Ulleråker börjar han bli väl bekant med förekomster av den starkt hotade cinnoberbaggen i vår närmiljö här i Uppsalas södra stadsdelar.
       </p>
-    </section>
-  </main>
-  
+    </article>
+  </div>
 </body>
 </html>
