Fix some issues

--- a/pages/aktuellt.html
+++ b/pages/aktuellt.html
@@ -65,7 +65,7 @@
       <h1>Aktuellt</h1>
   </div>
 
-  <div class="bli-medlem-info" style="transform: translate(0, -125px);">
+  <div class="aktuellt-info">
     <h1>Aktuellt</h1>
     <article>
       <h2 style="margin-bottom: 0;">Föreningen Malma by och ängar bjuder in: Träffa våra naturkunniga experter</h2>
