--- a/index.html
+++ b/index.html
@@ -72,14 +72,16 @@
             <h1 style="font-size: 3rem;">Föreningen Malma by och ängar</h1>
         </div>
         <div class="homepage-right">
-            <h2>Hjälp oss bevara vår natur!</h2>
-            <p>
-                Malma ängar har en rik biologisk mångfald och är enligt Jordbruksverket en av Sveriges mest bevaransvärda ängar. I Dagsläget är ängarna starkt hotade av markexploatering och bebyggelse. 
-                Istället för att fylla området med grå betong vill bevara ängarna och utveckla det närliggande området till ett frodande natur- och kulturlandskap.<br><br>
+            <div>
+                <h2>Hjälp oss bevara vår natur!</h2>
+                <p>
+                    Malma ängar har en rik biologisk mångfald och är enligt Jordbruksverket en av Sveriges mest bevaransvärda ängar. I Dagsläget är ängarna starkt hotade av markexploatering och bebyggelse. 
+                    Istället för att fylla området med grå betong vill bevara ängarna och utveckla det närliggande området till ett frodande natur- och kulturlandskap.<br><br>
 
-                Hjälp oss stoppa exploateringen och bevara detta vackra område för framtida generationer!
-            </p>
-            <a href="#homepage-info-page">Läs Mer</a>
+                    Hjälp oss stoppa exploateringen och bevara detta vackra område för framtida generationer!
+                </p>
+                <a href="#homepage-info-page">Läs Mer</a>
+            </div>
         </div>
     </div>
 
