Update frontpage styling

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <!-- body Info -->
     <div class="homepage-info" id="homepage-info-page">
-        <section style="background: linear-gradient(180deg, white, aliceblue); padding-top: 25px;">
+        <section>
           <div>
               <h3>Biologisk mångfald i hagen</h3>
               <p>
@@ -135,8 +135,9 @@
                   <img src="src/images/bi1.png" loading="lazy"/>
               </div>
           </div>
+          <img src="src/images/graphics/wave.svg" loading="lazy" style="position: absolute; bottom: 0; left: 0; z-index: 1;">
         </section>
-        <section style="background: linear-gradient(180deg, aliceblue, lavender);">
+        <section style="background-color: thistle;">
           <div>
               <h3>Hjälp till rädda Malma by och ängar</h3>
               <p>
@@ -180,8 +181,9 @@
                   kent.berg@uaf.uu.se
               </p>
           </div>
+          <img src="src/images/graphics/wave1.svg" loading="lazy" style="position: absolute; bottom: 0; left: 0; z-index: 1;"/>
         </section>
-        <section style="background-color: lavender; padding-bottom: 25px;">
+        <section style="background-color: #9EBC9E;">
           <div>
               <h3>Malma ängar och betesmarker</h3>
               <p>
